--- a/PrimitivniKalkulator/PrimitivniKalkulator/PrimitivniKalkulator.csproj
+++ b/PrimitivniKalkulator/PrimitivniKalkulator/PrimitivniKalkulator.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0E55E53D-D1CE-454E-A109-1EE7C1FC941C}</ProjectGuid>
+    <ProjectGuid>{8C36595A-7C05-4BEB-9590-73281FBF909A}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Kalkulator</RootNamespace>
-    <AssemblyName>Kalkulator</AssemblyName>
+    <RootNamespace>PrimitivniKalkulator</RootNamespace>
+    <AssemblyName>PrimitivniKalkulator</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -46,16 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="CalculatorLogic.cs" />
+    <Compile Include="ExpressionValidator.cs" />
+    <Compile Include="Forma.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Forma.Designer.cs">
+      <DependentUpon>Forma.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Forma.resx">
+      <DependentUpon>Forma.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
